<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvAddAlarm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="?attr/selectableItemBackground"
        android:drawablePadding="5dp"
        android:fontFamily="@font/calibre_semi"
        android:paddingTop="6dp"
        android:paddingBottom="6dp"
        android:text="@string/add_alarm_time"
        android:textColor="@color/grey3"
        android:textSize="16sp"
        app:drawableStartCompat="@drawable/ic_alarm" />

    <TextView
        android:id="@+id/tvAttachFile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="?attr/selectableItemBackground"
        android:drawablePadding="5dp"
        android:fontFamily="@font/calibre_semi"
        android:paddingTop="6dp"
        android:paddingBottom="6dp"
        android:text="@string/attach_file"
        android:textColor="@color/grey3"
        android:textSize="16sp"
        app:drawableStartCompat="@drawable/ic_attach" />

    <TextView
        android:id="@+id/tvAddTags"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="?attr/selectableItemBackground"
        android:drawablePadding="5dp"
        android:fontFamily="@font/calibre_semi"
        android:paddingTop="6dp"
        android:paddingBottom="6dp"
        android:text="@string/category"
        android:textColor="@color/grey3"
        android:textSize="16sp"
        app:drawableStartCompat="@drawable/ic_tag" />

</LinearLayout>