<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewmodel"
            type="tech.androidplay.sonali.todo.viewmodel.FeedbackViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        app:showFeedbackUploadResponse="@{viewmodel.feedbackLiveResponse}">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:id="@+id/layoutFeedbackToolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/btnBack"
                    android:layout_width="@dimen/padding_26dp"
                    android:layout_height="@dimen/padding_26dp"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="@dimen/padding_16dp"
                    android:layout_marginTop="@dimen/padding_16dp"
                    android:layout_marginEnd="@dimen/padding_16dp"
                    android:layout_marginBottom="@dimen/padding_16dp"
                    android:background="@drawable/bg_icon_ripple"
                    android:src="@drawable/ic_back"
                    tools:ignore="ContentDescription" />

            </RelativeLayout>

            <TextView
                android:id="@+id/tvFeedbackHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/padding_16dp"
                android:layout_marginTop="@dimen/padding_35dp"
                android:fontFamily="@font/calibre"
                android:text="@string/feedback"
                android:textColor="@color/grey3"
                android:textSize="@dimen/text_60sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/layoutFeedbackToolbar" />

            <TextView
                android:id="@+id/tvFeedbackSubHeader"
                android:layout_width="@dimen/padding_0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/padding_16dp"
                android:fontFamily="@font/calibre"
                android:text="@string/feedback_story"
                android:textColor="@color/grey2"
                android:textSize="@dimen/text_18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvFeedbackHeader" />

            <EditText
                android:id="@+id/etFeedbackTopic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/padding_16dp"
                android:background="@drawable/bg_rounded_10dp"
                android:fontFamily="@font/calibre"
                android:hint="@string/topic_hint"
                android:importantForAutofill="no"
                android:inputType="text"
                android:maxLines="1"
                android:padding="@dimen/padding_16dp"
                android:text="@={viewmodel.feedback.topic}"
                android:textColor="@color/grey3"
                android:textSize="@dimen/text_18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvFeedbackSubHeader" />

            <EditText
                android:id="@+id/etFeedbackDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/padding_16dp"
                android:background="@drawable/bg_rounded_10dp"
                android:fontFamily="@font/calibre"
                android:hint="@string/description_hint"
                android:importantForAutofill="no"
                android:inputType="textMultiLine"
                android:padding="@dimen/padding_16dp"
                android:text="@={viewmodel.feedback.description}"
                android:textColor="@color/grey3"
                android:textSize="@dimen/text_18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etFeedbackTopic" />

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/lottieFeedbackLoading"
                android:layout_width="@dimen/padding_100dp"
                android:layout_height="@dimen/padding_100dp"
                android:layout_marginTop="@dimen/padding_16dp"
                app:isProgressVisible="@{viewmodel.feedbackLiveResponse}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etFeedbackDescription"
                app:lottie_autoPlay="true"
                app:lottie_fileName="lottie_auth.json"
                app:lottie_loop="true" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnProvideFeedback"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_margin="@dimen/padding_16dp"
            android:background="@drawable/bg_rounded_6dp"
            android:backgroundTint="@color/dribblePink"
            android:fontFamily="@font/calibre_semi"
            android:onClick="@{() -> viewmodel.sendFeedback()}"
            android:text="@string/suggest_the_developers"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/text_18sp"
            app:isShowing="@{viewmodel.feedbackLiveResponse}" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>