<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/taskEditFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tvEditTasksHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="35dp"
            android:fontFamily="@font/calibre"
            android:text="@string/edit"
            android:textColor="@color/grey3"
            android:textSize="55sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imgTask"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginEnd="@dimen/padding_16dp"
            app:layout_constraintBottom_toBottomOf="@+id/tvEditTasksHeader"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tvEditTasksHeader" />

        <TextView
            android:id="@+id/tvSelectDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:background="?attr/selectableItemBackground"
            android:drawablePadding="5dp"
            android:fontFamily="@font/jost"
            android:paddingTop="6dp"
            android:paddingBottom="6dp"
            android:text="@string/hint_date_txt"
            android:textColor="@color/dribblePink"
            android:textSize="14sp"
            app:drawableStartCompat="@drawable/ic_date"
            app:drawableTint="@color/dribblePink"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvEditTasksHeader" />

        <TextView
            android:id="@+id/tvSelectTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:background="?attr/selectableItemBackground"
            android:drawablePadding="5dp"
            android:fontFamily="@font/jost"
            android:paddingTop="6dp"
            android:paddingBottom="6dp"
            android:visibility="gone"
            android:textColor="@color/dribblePink"
            android:textSize="14sp"
            app:drawableStartCompat="@drawable/ic_time"
            app:drawableTint="@color/dribblePink"
            app:layout_constraintStart_toEndOf="@+id/tvSelectDate"
            app:layout_constraintTop_toBottomOf="@+id/tvEditTasksHeader" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etTaskBody"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/padding_16dp"
            android:background="@android:color/transparent"
            android:ellipsize="end"
            android:fontFamily="@font/calibre"
            android:inputType="text"
            android:maxLines="1"
            android:textColor="@color/grey3"
            android:textSize="24sp"
            android:transitionName="todoBody"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvSelectDate" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etTaskDesc"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="@dimen/padding_16dp"
            android:background="@android:color/transparent"
            android:fontFamily="@font/calubre_light"
            android:gravity="top"
            android:inputType="textMultiLine"
            android:layoutDirection="ltr"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etTaskBody" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start|end|bottom"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:id="@+id/btnDeleteTask"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/jost_bold"
            android:text="@string/delete_task"
            android:textColor="@color/dribblePink"
            android:textSize="13sp"
            app:icon="@drawable/ic_delete"
            app:iconTint="@color/dribblePink" />

        <Button
            android:id="@+id/btnSaveTask"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/dribblePink"
            android:fontFamily="@font/jost_bold"
            android:text="@string/save_task"
            android:textColor="@color/white"
            android:textSize="13sp"
            app:icon="@drawable/ic_check"
            app:iconTint="@color/white"/>
    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>